--- a/styles.css
+++ b/styles.css
@@ -241,7 +241,7 @@ svg {
 }
 
 .icon-lighten {
-  transition: 1s;
+  transition: 0.5s;
   color: aliceblue;
 }
 
@@ -253,6 +253,13 @@ svg {
   color: white;
   text-align: center;
   margin-bottom: 60px;
+}
+ul.copyright {
+  cursor: default;
+  text-align: end;
+  font-size: 2em;
+  padding: 0em;
+  margin: 0em;
 }
 
 /* About page */
