--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,6 @@ h1 {
   text-transform: uppercase;
 }
 .nav-wrapper > .left-side > img {
-  block-size: 4em;
   margin-right: 20px;
   margin-top: auto;
   margin-bottom: auto;
@@ -57,8 +56,8 @@ h1 {
   text-shadow: 0px 0px 1px rgb(255, 255, 255);
 }
 
-.nav-wrapper > .right-side > div > p {
-  margin-top: 15px;
+.nav-wrapper > .right-side {
+  margin-top: auto;
   margin-bottom: auto;
 }
 
