--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,20 @@ body {
 
 h1 {
   margin-top: 14px;
-  margin-bottom: 21px;
+  margin-bottom: 22px;
 }
+
+p {
+  margin-top: 10px;
+}
+
+/* End of Master styles */
 
 /* Nav styles */
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
   padding: 30px;
-  margin-bottom: 20px;
   background-color: #2c2c2c;
 }
 
@@ -89,6 +94,8 @@ h1 {
 .active-nav-link a {
   color: rgb(255, 255, 255) !important;
 }
+
+/* End of nav styles */
 
 /* Portfolio styles*/
 
@@ -272,18 +279,23 @@ ul.copyright {
   block-size: 6em;
 }
 
+/* End of icons styles */
+
 /* About page */
 .two-column-wrapper {
   display: grid;
   grid-template-columns: 1fr 1fr;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .profile-image-wrapper img {
   width: 60%;
   display: block;
   margin: auto;
-  margin-top: 30px;
-  margin-bottom: 30px;
+  padding: 0;
+  /* margin-top: 30px; */
+  /* margin-bottom: 30px; */
   /* padding: 40px 150px 128px 100px; top right bottom left */
 }
 
