--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,8 @@ body {
   font-family: "Lato", sans-serif;
   margin: 0px;
   min-width: 700px;
+  background-color: #2c2c2c;
+  background-color: rgb(44, 44, 44);
 }
 
 .container {
@@ -61,6 +63,7 @@ p {
   color: white;
   text-transform: uppercase;
   text-shadow: 0px 0px 1px rgb(255, 255, 255);
+  padding-bottom: 5px;
 }
 
 .nav-wrapper > .right-side {
@@ -291,7 +294,6 @@ ul.copyright {
 .end-logo {
   display: flex;
   justify-content: center;
-  block-size: 6em;
 }
 
 /* End of icons styles */
